k8s/cinefront.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinefront
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cinefront
  template:
    metadata:
      labels:
        app: cinefront
    spec:
      serviceAccountName: cinefront-sa
      containers:
      - name: cinefront
        image: maymay1008/cinefront:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cinefront
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: cinefront
